--- a/css/pong.css
+++ b/css/pong.css
@@ -29,8 +29,19 @@ body{
     
 }
 
-.tilt{
-    border-color: rgb(0, 250, 0) !important;
+.tiltHaut {
+    border-top-color: rgb(0, 250, 0) !important;
+}
+
+.tiltBas {
+    border-bottom-color: rgb(0, 250, 0) !important;
+}
+.tiltGauche {
+    border-left-color: rgb(250, 0, 0) !important;
+}
+
+.tiltDroite {
+    border-right-color: rgb(250, 0, 0) !important;
 }
 
 /** on défini les paramètres de la balle: dimensions, couleur,position **/
