--- a/css/pong.css
+++ b/css/pong.css
@@ -79,3 +79,22 @@ body{
 #gauche{
     left: 1%;
 }
+
+.score {
+        display: flex;
+        padding-top: 20%;
+        text-align: center;
+        font-size: 40px;
+    }
+    
+#Sgauche {
+    padding-left: 25%;
+    float: left;
+    color: blue;
+}
+    
+#Sdroite {
+    padding-right: 25%;
+    float: right;
+    color: red;
+}
