--- a/css/pong.css
+++ b/css/pong.css
@@ -98,3 +98,63 @@ body{
     float: right;
     color: red;
 }
+
+.ecranDebut{
+    transition: all 3s;
+    box-sizing: border-box;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.8);
+    z-index: 1;
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 50px;
+    margin: 10px;
+}
+
+.btn{
+    text-decoration: none;
+    padding: 10px;
+    font-family: arial;
+    font-size: 1em;
+    color: #5f497a;
+    background-color: #fac08f;
+    border-radius: 24px;
+    display:inline-block;
+    cursor:pointer;
+    padding:12px 16px;
+    -webkit-border-radius: 24px;
+    -moz-border-radius: 24px;
+    border: 4px inset #FFFFFF;
+    box-shadow: 3px 3px 12px #444444;
+    -webkit-box-shadow: 3px 3px 12px #444444;
+    -moz-box-shadow: 3px 3px 12px #444444;
+}
+
+.btn:hover {
+    padding: 10px;
+    font-size: 1em;
+    color: #5f497a;
+    background-color: #fac08f;
+    border-radius: 24px;
+    display:inline-block;
+    cursor:pointer;
+    padding:12px 16px;
+    -webkit-border-radius: 24px;
+    -moz-border-radius: 24px;
+    border: 4px outset #FFFFFF;
+    box-shadow: 3px 3px 12px #444444;
+    -webkit-box-shadow: 3px 3px 12px #444444;
+    -moz-box-shadow: 3px 3px 12px #444444;
+}
+
+.invisible {
+    display: none;
+}
